# gz_ekumen_worlds

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docker/: docker-compose.yml  run.sh
docker/files/: fixuid_config.yml
docker/images/humble/: Dockerfile
docker/images/jazzy/: Dockerfile
gz-ekumen/: CMakeLists.txt  package.xml
gz-ekumen/models/ekumen_hq4/: model.sdf
gz-ekumen/models/ekumen_hq4/meshes/: wood.dae
gz-ekumen/worlds/: empty_ekumen_hq4.world  populated_ekumen_hq4.world
gz_ekumen_worlds/: CMakeLists.txt  package.xml
gz_ekumen_worlds/models/ekumen_hq4/: model.config  model.sdf
gz_ekumen_worlds/models/ekumen_hq4/meshes/: tiles.dae  walls.dae
gz_ekumen_worlds/worlds/: empty_ekumen_hq4.world  populated_ekumen_hq4.world
